fixed the width on the table tab button which had been squished on narrow screens. It was in .table-title a { width: 25;} which I changed to max-width: 20em;

--- a/2-modules/_tabs.scss
+++ b/2-modules/_tabs.scss
@@ -35,6 +35,7 @@
     display: block;
     padding: ($base-spacing / 2) $gutter;
     text-decoration: none;
+    min-width: 10em;
 
     @include media($tab-mode) {
       display: inline-block;
